3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/daemon.c: Patch by wart, tracker 1489902 - open a file like /dev/null
   to then dup - this fixes -detach crash problem.  Might be better to use
   some other file, but in theory, shouldn't be much going here, and I
   don't think we can safely use a file that is already opened by the
   server.
MSW 2006-07-05

common/region.c: wrong order for memset call.
Ryo 2006-07-04

common/object.c: revert my previous fix, it's actually a feature :)
Ryo 2006-06-27

------------------------------------------------------------------------------
Changes for 1.9.1:

acinclude.m4, aclocal.m4, configure, configure.ac:  Fix crossedit header
  detection - even when passed --with-x to configure and having all the files,
  it wouldn't find the headers because it didn't pass in the correct -I
  options for where they sit.   Also, update for 1.9.1 release.
MSW 2006-06-29

server/rune.c: Undo last patch - breaks summoning runes.
server/skills.c: Change disarm logic - after first failure, don't continue
  to disarm traps (makes sense anyways - can really only disarm one thing
  at a time) - this fixes the problem that last change to rune.c tried
  to fix.
MSW 2006-06-27

server/rune.c: Patch from schmorp - when dealing with traps, don't put them
  underneath the player when a disarm failure happens, instead, update the
  direction to hit the player - prevents a recursion problems causing
  hundreds of objects.
MSW 2006-06-25

common/object.c: don't consider FLAG_INV_LOCKED for can_merge.
Ryo 2006-06-24

common/object.c: in insert_ob_in_map() don't stop processing flying objects